tests/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-one-is-struct-2.stderr
error: lifetime may not live long enough
  --> $DIR/ex3-both-anon-regions-one-is-struct-2.rs:4:5
   |
LL | fn foo(mut x: Ref, y: &u32) {
   |        -----          - let's call the lifetime of this reference `'2`
   |        |
   |        has type `Ref<'_, '1>`
LL |     y = x.b;
   |     ^^^^^^^ assignment requires that `'1` must outlive `'2`
   |
help: consider introducing a named lifetime parameter
   |
LL | fn foo<'a>(mut x: Ref<'a, 'a>, y: &'a u32) {
   |       ++++           ++++++++      ++

warning[E0384]: cannot assign to immutable argument `y`
  --> $DIR/ex3-both-anon-regions-one-is-struct-2.rs:4:5
   |
LL |     y = x.b;
   |     ^^^^^^^ cannot assign to immutable argument
   |
   = note: `#[warn(mut_non_mut)]` on by default
help: consider making this binding mutable
   |
LL | fn foo(mut x: Ref, mut y: &u32) {
   |                    +++

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0384`.
